--- a/css/index.scss
+++ b/css/index.scss
@@ -188,3 +188,12 @@ $theme-color-active:#ea703a;
     background-position:-42px -42px;
   }
 }
+//去策展
+.goAlbum{
+  width:63px;
+  height:21px;
+  background:$theme-color-active;
+  border-radius: 11.5px;
+  color:#fff;
+  border:none;
+}
