--- a/template/collection.html
+++ b/template/collection.html
@@ -41,7 +41,7 @@
             </div>
             <div class="key-words">
                 <span class="fontB" style="line-height: 36px">关键字：</span>
-                <input type="text" class="collection-search" id="collection-search">
+                <input type="text" class="collection-search" id="collection-search" ng-trim="true">
                 <ul>
                     <li>
                         <input type="file" style="width:21px;height:21px;opacity: 0;overflow: hidden;">
@@ -147,7 +147,7 @@
             </div>
             <div class="key-words">
                 <span class="fontB" style="line-height: 36px">关键字：</span>
-                <input type="text" class="collection-search" id="collection-search1">
+                <input type="text" class="collection-search" id="collection-search1" ng-trim="true">
                 <ul>
                     <li>
                         <input type="file" style="width:21px;height:21px;opacity: 0;overflow: hidden;">
