--- a/template/display.html
+++ b/template/display.html
@@ -31,7 +31,7 @@
             </div>
             <div class="display-search">
                 <span>关键词：</span>
-                <input type="text" id="search_box">
+                <input type="text" id="search_box" ng-trim="true">
                 <button ng-click="showKeyword()"></button>
             </div>
             <div class="condition">
