--- a/template/collectionDetailsVideo.html
+++ b/template/collectionDetailsVideo.html
@@ -6,9 +6,9 @@
            poster="//vjs.zencdn.net/v/oceans.png"
            data-setup='{}'
     >
-        <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4"></source>
-        <source src="http://vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>
-        <source src="http://vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source>
+        <source ng-src="{{url}}" type="video/mp4"></source>
+        <source ng-src="{{url}}" type="video/webm"></source>
+        <source ng-src="{{url}}" type="video/ogg"></source>
         <p class="vjs-no-js">
             To view this video please enable JavaScript, and consider upgrading to a
             web browser that
