--- a/template/museumDetails.html
+++ b/template/museumDetails.html
@@ -1,9 +1,14 @@
 <p class="breadcrumb">
-    <a ui-sref="home">首页</a><u>&gt;&gt;</u><a ui-sref="museum.museumMap">博物馆导览</a><u>&gt;&gt;</u><span ng-bind="data.museumInfo.museumName"></span>
+    <a ui-sref="home">首页</a><u>&gt;&gt;</u><a ui-sref="museum.museumMap">博物馆导览</a><u>&gt;&gt;</u><span
+        ng-bind="data.museumInfo.museumName"></span>
 </p>
 <div class="museum-details">
     <div class="museum-details-img">
-        <img src="img/digization.png" width="640" height="360" alt="">
+        <ul>
+            <li ng-repeat="sl in sliders" repeat-done="slider6()">
+                <img ng-src="{{sl.url}}" width="640" height="360"/>
+            </li>
+        </ul>
     </div>
     <div class="museum-details-msg">
         <p class="museum-details-msg-title" ng-bind="data.museumInfo.museumName"></p>
@@ -72,7 +77,8 @@
     </div>
     <div class="museum-details-collection">
         <p class="museum-details-title">
-            馆内藏品 <a ui-sref="collection({museum:data.museumInfo.museumName,type:'文物藏品',id:data.museumInfo.id})">更多 &Gt;</a>
+            馆内藏品 <a
+                ui-sref="collection({museum:data.museumInfo.museumName,type:'文物藏品',id:data.museumInfo.id})">更多 &Gt;</a>
         </p>
         <ul>
             <li ng-repeat="x in data.culList">
@@ -88,8 +94,8 @@
             地理信息
         </p>
         <div style="margin-top:8px;">
-            <div class="museum-details-map-url" >
-                <iframe id="map" width="308"  height="314" frameborder="0"></iframe>
+            <div class="museum-details-map-url">
+                <iframe id="map" width="308" height="314" frameborder="0"></iframe>
             </div>
             <p ng-bind="data.museumInfo.address">
             </p>
@@ -100,10 +106,12 @@
             展览 <a ui-sref="display({museum:data.museumInfo.museumName,id:data.museumInfo.id})">更多 &Gt;</a>
         </p>
         <div class="museum-details-display-content">
-            <a ui-sref="displaydetails({id:data.spreList.id})"><img ng-src="{{'../'+data.spreList.pictureThumb}}" width="297" height="167px" alt=""></a>
+            <a ui-sref="displaydetails({id:data.spreList.id})"><img ng-src="{{'../'+data.spreList.pictureThumb}}"
+                                                                    width="297" height="167px" alt=""></a>
             <div>
                 <h6><a ui-sref="displaydetails({id:data.spreList.id})" ng-bind="data.spreList.headline"></a></h6>
-                <h5 ng-show="data.spreList.staTime">展期：<span ng-bind="data.spreList.staTime+'-'+data.spreList.overTime"></span></h5>
+                <h5 ng-show="data.spreList.staTime">展期：<span
+                        ng-bind="data.spreList.staTime+'-'+data.spreList.overTime"></span></h5>
                 <p ng-bind="data.spreList.content">
                 </p>
             </div>
@@ -116,7 +124,8 @@
             虚拟展厅
         </p>
         <div class="museum-details-digization-content">
-            <a href="" target="_blank"><img ng-src="{{'../'+data.virList.pictureThumb}}" width="297" height="167px" alt=""></a>
+            <a href="" target="_blank"><img ng-src="{{'../'+data.virList.pictureThumb}}" width="297" height="167px"
+                                            alt=""></a>
             <div>
                 <h6 ng-bind="data.virList.viName">
                 </h6>
