--- a/template/register.html
+++ b/template/register.html
@@ -13,17 +13,17 @@
             <tbody>
             <tr>
                 <td><label for="">用户昵称：</label></td>
-                <td><input type="text" ng-required="true" ng-pattern="/^[\u4E00-\u9FA5A-Za-z0-9_]+$/" ng-maxlength="20"
+                <td><input ng-trim="true" type="text" ng-required="true" ng-pattern="/^[\u4E00-\u9FA5A-Za-z0-9_]+$/" ng-maxlength="20"
                            ng-minlength="4" name="nikename" ng-model="nikename"></td>
             </tr>
             <tr>
                 <td><label for="">手机号码：</label></td>
-                <td><input type="text" ng-required="true" ng-pattern="/^1[3-9][0-9]\d{8}$/" name="phone"
+                <td><input ng-trim="true" type="text" ng-required="true" ng-pattern="/^1[3-9][0-9]\d{8}$/" name="phone"
                            ng-model="phone"></td>
             </tr>
             <tr>
                 <td><label for="">输入下图验证码：</label></td>
-                <td><input type="text" ng-required="true" name="piccode" ng-model="piccode"></td>
+                <td><input ng-trim="true" type="text" ng-required="true" name="piccode" ng-model="piccode"></td>
             </tr>
             <tr style="line-height: 80px;">
                 <td></td>
@@ -38,17 +38,17 @@
             </tr>
             <tr>
                 <td><label for="">短信验证码：</label></td>
-                <td><input type="text" style="width:182px;margin-right:20px;" ng-model="secretCode" ng-required="true" name="secretCode">
+                <td><input ng-trim="true" type="text" style="width:182px;margin-right:20px;" ng-model="secretCode" ng-required="true" name="secretCode">
                     <button class="register-msn" ng-click="countdown()" ng-bind="status" ng-class="{send:!send}" ng-disabled="!send"></button>
                 </td>
             </tr>
             <tr>
                 <td><label for="">登录密码：</label></td>
-                <td><input type="text" ng-required="true" ng-model="password" name="password" ng-pattern="/^[0-9A-Za-z_]*$/" ng-minlength="8" ng-maxlength="18"></td>
+                <td><input ng-trim="true" type="text" ng-required="true" ng-model="password" name="password" ng-pattern="/^[0-9A-Za-z_]*$/" ng-minlength="8" ng-maxlength="18"></td>
             </tr>
             <tr>
                 <td><label for="">确认密码：</label></td>
-                <td><input type="text" ng-model="rpassword" name="rpassword" ng-required="true"></td>
+                <td><input ng-trim="true" type="text" ng-model="rpassword" name="rpassword" ng-required="true"></td>
             </tr>
             <tr>
                 <td></td>
