--- a/css/digitization.scss
+++ b/css/digitization.scss
@@ -41,6 +41,7 @@
   .digization-list {
     padding: 20px 0px 0 83px;
     margin-top:10px;
+    height:680px;
     &:after {
       display: block;
       content: '';
