--- a/css/display.scss
+++ b/css/display.scss
@@ -168,6 +168,7 @@
   .display-list-content-inner{
     ul{
       width:1034px;
+      height:675px;
       display:-webkit-box;
       display:-ms-flexbox;
       display:flex;
