--- a/template/display_details.html
+++ b/template/display_details.html
@@ -15,7 +15,6 @@
         </h3>
     </div>
     <div class="display-details-content">
-        <p ng-bind-html="detailsData.content">
-        </p>
+        <p ng-bind-html="detailsData.content"></p>
     </div>
 </div>
